correction des images version mobile

--- a/P2_Reservia.css
+++ b/P2_Reservia.css
@@ -696,7 +696,7 @@ ul
     #matin, #eau, #bleu
     {
         width: 40%;
-        height: 100%;
+        height: 95%;
     }
 
     #hebergement
@@ -714,8 +714,8 @@ ul
 
     #cannebiere, #port, #mouette, #mer, #panier, #amina
     {
-        width: 100%;
-        height: 60%;
+        width: 97%;
+        height: 53%;
     }
 
     #Activites
